Day 47/ques/3-tire-diff-ns/db-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mydbs
  labels:
    app: mydb
spec: {}
status: {}
